# leartech-ai-classifier

./: .gitignore  .gitleaks.toml  Dockerfile  Makefile  README.md  pyproject.toml
.jx/: variables.sh
.lighthouse/jenkins-x/: lint.yaml  pullrequest.yaml  release.yaml  triggers.yaml
.lighthouse/jenkins-x/ai-review/: feedback.yaml  pullrequest.yaml
.lighthouse/jenkins-x/security-scan/: image-scan.yaml  pullrequest.yaml
.lighthouse/jenkins-x/security-scan/dynamic/: pullrequest.yaml
app/: config.py  cron_eval.py  cron_train.py  features.py  main.py  model.py
charts/leartech-ai-classifier/: Chart.yaml  values.yaml
charts/leartech-ai-classifier/templates/: _helpers.tpl  cronjob-eval.yaml  cronjob-train.yaml  deployment.yaml  externalsecret-tekton-git.yaml  ingress.yaml  service.yaml
models/: scaler.json  tfidf_char.json
preview/: helmfile.yaml.gotmpl  values.yaml.gotmpl
tests/: conftest.py  test_api.py  test_eval.py  test_features.py  test_model.py
