[project]
name = "leartech-ai-classifier"
version = "0.1.0"
description = "PASS/FAIL code review classifier — fast pre-filter for the AI review pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "torch>=2.5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "coverage>=7.4",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".lighthouse", "charts", "preview", "models"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "S", "N"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["torch.*", "sklearn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "app/cron_*.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
